--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="row">
     <div class="col1">
       <div class="col-contain">
-        <img src="Capture.png" class="profile-pic"> 
+        <img src="Capture.PNG" class="profile-pic"> 
         <div class="profile-name" style="display: inline-block;">
           <p style="margin: 0px; "><b>thi.ng</b></p>
           <p style="margin: 0px; color: #949fab">3 days ago - 24 min read</p>
