--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <img src="bookmark.png" class="bookmark"> 
         <div class="desc">
-          <img src="phone.png">
+          <img src="phone.PNG">
            <p style="margin:0px;"><h2>Designing Facebook Collage</h2></p>
           <p style="color: #949fab; margin:0px;">A journey in design & storytelling</p>
         </div>
